--- a/package.json
+++ b/package.json
@@ -57,9 +57,8 @@
     "expect": "^1.11.1",
     "jsdom": "^6.5.1",
     "mocha": "^2.3.3",
-    "react": "^0.14.0-rc1",
+    "react": "^0.13.1",
     "react-addons-test-utils": "^0.14.0-rc1",
-    "react-dom": "^0.14.0-rc1",
     "rimraf": "^2.4.3",
     "webpack": "^1.12.2"
   }
