--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "clean": "rimraf lib dist",
     "prepublish": "npm run clean && npm run build",
     "lint": "eslint src",
-    "test": "NODE_ENV=eee mocha --compilers js:babel/register --recursive"
+    "test": "NODE_ENV=eee mocha --compilers js:babel/register --recursive",
+    "intall": "npm run build:lib"
   },
   "repository": {
     "type": "git",
