--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prepublish": "npm run clean && npm run build",
     "lint": "eslint src",
     "test": "NODE_ENV=eee mocha --compilers js:babel/register --recursive",
-    "intall": "npm run build:lib"
+    "preintall": "npm run build:lib"
   },
   "repository": {
     "type": "git",
